# purequant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
purequant/: __init__.py  attribution.py  backtest.py  bonds.py  data.py  derivatives.py  factor.py  futures.py  hedge.py  linalg.py  optimize.py  risk.py  stats.py  types.py
tests/: test_purequant.py
